# er

./: Constants.qml  codemagic.yaml  main.qml  qmldir
MIRA/client/: CMakeLists.txt  main.cpp
MIRA/client/.qtcreator/: CMakeLists.txt.user.03c70aa  CMakeLists.txt.user.0e98e34
MIRA/client/android/: AndroidManifest.xml
MIRA/client/resources/: Constants.qml  MiraConstants.qml  ThreadsConstants.qml  ThreadsIcons.qml  ThreadsMain.qml  main.qml  qml.qrc  qmldir
MIRA/client/resources/assets/: Icons.qml  Logo.qml  qmldir
MIRA/client/resources/components/: BottomNavBar.qml  Icon.qml  IconButton.qml  PostItem.qml  RoundImage.qml  ThreadsAvatar.qml  ThreadsButton.qml  ThreadsIcon.qml  ThreadsPostItem.qml  ThreadsTabBar.qml
MIRA/client/resources/qml/: Loc.qml  Theme.qml  main.qml  qmldir
MIRA/client/resources/qml/assets/: NebulaBackground.qml
MIRA/client/resources/qml/components/: ActionSheet.qml  BottomNav.qml  CarouselView.qml  CircleImage.qml  CreatePostButton.qml  FilterPreview.qml  LinkPreviewCard.qml  LuxurySplashScreen.qml  MiraAnimatedLogo.qml  MiraAvatar.qml  MiraButton.qml  MiraIcon.qml  NativeToast.qml  PollCreator.qml  PostCard.qml  PullToRefresh.qml  QuotedPostCard.qml  ReactionPicker.qml  RichTextDisplay.qml  SettingItem.qml  SkeletonCard.qml  StardustEffect.qml  StickerDrawer.qml  StoryPollSticker.qml  StoryQuestionSticker.qml  VoiceMessageBubble.qml  qmldir
MIRA/client/resources/qml/stores/: FeedStore.qml  SearchStore.qml  UserStore.qml
MIRA/client/resources/qml/views/: AboutSettingsView.qml  ChatView.qml  (+42 more)
MIRA/client/resources/views/: ActivityView.qml  ChatView.qml  CreatePostView.qml  EditProfileView.qml  FaceAuthView.qml  HomeView.qml  LoginView.qml  MessagesView.qml  ProfileView.qml  RegisterView.qml  SearchView.qml  SettingsView.qml  ThreadDetailView.qml  ThreadsHomeView.qml
MIRA/client/src/: AIService.cpp  AIService.h  AuthService.cpp  AuthService.h  CommentModel.cpp  CommentModel.h  ConversationModel.cpp  ConversationModel.h  DatabaseManager.cpp  DatabaseManager.h  HapticManager.cpp  HapticManager.h  MessageModel.cpp  MessageModel.h  NetworkManager.cpp  NetworkManager.h  NotificationModel.cpp  NotificationModel.h  NotificationService.cpp  NotificationService.h  ProfileViewModel.cpp  ProfileViewModel.h  SearchViewModel.cpp  SearchViewModel.h  ThreadModel.cpp  ThreadModel.h
MIRA/server/: CMakeLists.txt  build_and_run.bat  main.cc  main.py  mira.db
MIRA/server/controllers/: AuthController.cc  AuthController.h  NotificationController.cc  NotificationController.h  PostController.cc  PostController.h  SocialController.cc  SocialController.h  UserController.cc  UserController.h
MIRA/server/scripts/: send_email.py
(+13 files in other folders)
